<resources>
    <string name="app_name">Asclepius</string>
    <string name="gallery">Gallery</string>
    <string name="analyze">Analyze</string>
    <string name="text_header">Title</string>
    <string name="text_body">Description</string>
    <string name="result_type">Type</string>
    <string name="result_score">Confidence score: %s</string>
    <string name="image_classifier_failed">Image classifier failed to initialize</string>
    <string name="empty_image_warning">Please add the image first.</string>
    <string name="news">News</string>
    <string name="history">History</string>
    <string name="imageview">ImageView</string>
    <string name="delete">Delete All</string>
    <string name="result_header">Analyze Result</string>
    <string name="home">Home</string>
</resources>