<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:cardCornerRadius="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/ivImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars"
                android:contentDescription="@string/imageview" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_toEndOf="@id/cardImage"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/cardImage"
            app:layout_constraintTop_toTopOf="@id/cardImage">

            <TextView
                android:id="@+id/tvNewsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:paddingTop="8dp"
                android:text="@string/text_header"
                android:textSize="16sp"
                android:layout_weight="0.6"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNewsDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="4dp"
                android:paddingBottom="8dp"
                android:textColor="@android:color/darker_gray"
                android:text="@string/text_body"
                android:textSize="12sp"
                android:ellipsize="end"
                android:layout_weight="0.4"
                android:maxLines="1" />

        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
